# nordvpn-indicator

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: run-tests.yml
nordvpn/: __init__.py  __main__.py  indicator.py  nordvpn.py  settings.py  status.py  utils.py
nordvpn_indicator/: __init__.py  __main__.py  indicator.py
tests/: test_nordvpn.py  test_nordvpn_client.py
