[tool.poetry]
name = "nordvpn-indicator"
version = "0.1.0"
description = "NordVPN Linux desktop indicator"
authors = ["Alberto Cardellini"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "nordvpn_indicator" },
    { include = "nordvpn" },
]

[tool.poetry.dependencies]
python = "^3.9"
pycairo = "^1.21.0"
PyGObject = "^3.42.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.961"

[tool.poetry.scripts]
nordvpn_indicator = 'nordvpn_indicator:main'

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
